--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <button class="cta-button">Comenzar Ahora</button>
         </div>
         <div class="hero-image">
-            <!-- Reemplaza con tu imagen -->
-            <img src="images/hero-bg.jpg" alt="Fides Key" style="background: #2563eb; width: 100%; height: 300px; border-radius: 10px;">
+            <img src="images/hero-bg.jpg" alt="Fides Key">
         </div>
     </section>
 
