--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fides Key - Landing Page</title>
+    <title>Fides Key - Soluciones Digitales</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <!-- Header -->
     <header class="header">
         <nav class="nav">
             <div class="logo">
@@ -15,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#features">Características</a></li>
+                <li><a href="#caracteristicas">Características</a></li>
                 <li><a href="#testimonios">Testimonios</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -27,71 +28,93 @@
         </nav>
     </header>
 
+    <!-- Hero Section -->
     <section class="hero" id="inicio">
         <div class="hero-content">
-            <h1>Bienvenido a Fides Key</h1>
-            <p>Soluciones innovadoras para tus necesidades digitales</p>
-            <button class="cta-button">Comenzar Ahora</button>
+            <h1>Transformamos tus Ideas en Realidad Digital</h1>
+            <p>Soluciones innovadoras y personalizadas para potenciar tu presencia online</p>
+            <button class="cta-button">Comenzar Proyecto</button>
         </div>
         <div class="hero-image">
-            <img src="images/hero-bg.jpg" alt="Fides Key">
+            <img src="images/hero-bg.jpg" alt="Fides Key - Soluciones Digitales">
         </div>
     </section>
 
-    <section class="features" id="features">
+    <!-- Features Section -->
+    <section class="features" id="caracteristicas">
         <div class="container">
-            <h2>Nuestras Características</h2>
+            <h2>Nuestras Soluciones</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">🚀</div>
-                    <h3>Rápido</h3>
-                    <p>Soluciones veloces y eficientes</p>
+                    <h3>Desarrollo Web</h3>
+                    <p>Landing pages y sitios web optimizados para conversión</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">💡</div>
-                    <h3>Innovador</h3>
-                    <p>Tecnología de vanguardia</p>
+                    <h3>Diseño UX/UI</h3>
+                    <p>Interfaces intuitivas que enamoran a tus usuarios</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🔒</div>
-                    <h3>Seguro</h3>
-                    <p>Protección garantizada</p>
+                    <h3>Seguridad</h3>
+                    <p>Protección avanzada para tus datos y usuarios</p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Testimonials Section -->
     <section class="testimonials" id="testimonios">
         <div class="container">
-            <h2>Lo que Dicen Nuestros Clientes</h2>
+            <h2>Confían en Nosotros</h2>
             <div class="testimonials-grid">
                 <div class="testimonial-card">
-                    <p>"Increíble servicio, altamente recomendado!"</p>
-                    <span>- Juan Pérez</span>
+                    <p>"Increíble el trabajo de Fides Key, transformaron completamente nuestra presencia digital."</p>
+                    <span>- María González, EcoStore</span>
                 </div>
                 <div class="testimonial-card">
-                    <p>"Transformaron nuestro negocio por completo."</p>
-                    <span>- María García</span>
+                    <p>"Profesionales, eficientes y con resultados medibles. Altamente recomendados."</p>
+                    <span>- Carlos Rodríguez, TechSolutions</span>
+                </div>
+                <div class="testimonial-card">
+                    <p>"El mejor ROI que hemos tenido en proyectos digitales. Superaron expectativas."</p>
+                    <span>- Ana López, InnovateLab</span>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Contact Section -->
     <section class="contact" id="contacto">
         <div class="container">
-            <h2>Contáctanos</h2>
+            <h2>Hablemos de tu Proyecto</h2>
             <form class="contact-form">
-                <input type="text" placeholder="Nombre" required>
-                <input type="email" placeholder="Email" required>
-                <textarea placeholder="Mensaje" rows="5" required></textarea>
-                <button type="submit">Enviar Mensaje</button>
+                <input type="text" placeholder="Tu nombre completo" required>
+                <input type="email" placeholder="correo@empresa.com" required>
+                <input type="tel" placeholder="+34 600 000 000" required>
+                <textarea placeholder="Cuéntanos sobre tu proyecto..." rows="6" required></textarea>
+                <button type="submit">Solicitar Presupuesto</button>
             </form>
         </div>
     </section>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Fides Key. Todos los derechos reservados.</p>
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <h3>Fides Key</h3>
+                    <p>Soluciones digitales que impulsan tu negocio</p>
+                </div>
+                <div class="footer-contact">
+                    <p>📧 info@fideskey.com</p>
+                    <p>📱 +34 600 000 000</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Fides Key. Todos los derechos reservados.</p>
+            </div>
         </div>
     </footer>
 
