--- a/index.html
+++ b/index.html
@@ -1,85 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="es">
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FidesKey is an intelligent platform for verified news and educational content, offering secure, real-time, and global coverage to build your digital trust." />
-    <title>FidesKey - Verified News & Educational Content</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="description" content="FidesKey - Noticias verificadas y contenido educativo" />
+    <title>FidesKey - Noticias Verificadas</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      @keyframes bounce {
-        0%, 100% {
-          transform: translateY(-25%);
-          animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-        }
-        50% {
-          transform: translateY(0);
-          animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-        }
-      }
-      .animate-bounce {
-        animation: bounce 1s infinite;
-      }
-      .animate-scroll {
-        animation: scroll 40s linear infinite;
-      }
-      @keyframes scroll {
-        from { transform: translateX(0); }
-        to { transform: translateX(-50%); }
-      }
-      @keyframes pulse {
-        50% {
-          opacity: .5;
-        }
-      }
-      .animate-pulse {
-        animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-      }
-    </style>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              playfair: ['Playfair Display', 'serif'],
-            },
-            colors: {
-              'primary': '#F2C12E',
-              'secondary': '#0D9488',
-              'night-blue': '#0A1A35',
-              'off-white': '#F8FAFC',
-              'background': '#FFFFFF',
-              'text-primary': '#1A202C',
-              'text-secondary': '#4A5568',
-              'white': '#FFFFFF',
-            },
-            animation: {
-              'pulse-glow': 'pulse-glow 2.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-            },
-            keyframes: {
-              'pulse-glow': {
-                '0%, 100%': { 
-                  boxShadow: '0 0 0 0 rgba(242, 193, 46, 0.7)',
-                  transform: 'scale(1)' 
-                },
-                '50%': { 
-                  boxShadow: '0 0 0 8px rgba(242, 193, 46, 0)',
-                  transform: 'scale(1.02)'
-                },
-              },
-            },
-          },
-        },
-      };
-    </script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="scripts/main.js"></script>
-  </body>
+</head>
+<body class="bg-gray-50">
+    <div class="min-h-screen flex items-center justify-center">
+        <div class="text-center">
+            <h1 class="text-4xl font-bold text-gray-900 mb-4">🚧 FidesKey - Sitio en Construcción 🚧</h1>
+            <p class="text-xl text-gray-600 mb-8">Estamos mejorando tu experiencia. Vuelve pronto.</p>
+            <div class="bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 rounded">
+                <p>✅ React configurado</p>
+                <p>✅ Multiidioma listo</p>
+                <p>🔧 Ajustando build process</p>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
