--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FidesKey - Noticias verificadas y contenido educativo" />
-    <title>FidesKey - Noticias Verificadas</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <meta name="description" content="FidesKey is an intelligent platform for verified news and educational content, offering secure, real-time, and global coverage to build your digital trust." />
+    <title>FidesKey - Verified News & Educational Content</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
-</head>
-<body class="bg-gray-50">
-    <div class="min-h-screen flex items-center justify-center">
-        <div class="text-center">
-            <h1 class="text-4xl font-bold text-gray-900 mb-4">🚧 FidesKey - Sitio en Construcción 🚧</h1>
-            <p class="text-xl text-gray-600 mb-8">Estamos mejorando tu experiencia. Vuelve pronto.</p>
-            <div class="bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 rounded">
-                <p>✅ React configurado</p>
-                <p>✅ Multiidioma listo</p>
-                <p>🔧 Ajustando build process</p>
-            </div>
-        </div>
-    </div>
-</body>
+    
+    <!-- Tailwind CSS para producción -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/scripts/main.js"></script>
+  </body>
 </html>
