--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/scripts/main.js"></script>
+    <script type="module" src="/scripts/main.jsx"></script>
   </body>
 </html>
+
